--- a/ITI.ElectroDev.Presentation/Views/Category/Add.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Category/Add.cshtml
@@ -1,7 +1,4 @@
-﻿@using System.Globalization
-@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer localizer﻿
-@model CategoryCreateModel
+﻿@model CategoryCreateModel
 <h2>@localizer["Add New Category"]</h2>
 
 <a asp-controller="Category" asp-action="Index">
