--- a/ITI.ElectroDev.Presentation/Views/Category/Edit.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Category/Edit.cshtml
@@ -1,7 +1,4 @@
-﻿@using System.Globalization
-@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer localizer﻿
-<h2>@localizer["Edite"]</h2>
+﻿<h2>@localizer["Edite"]</h2>
 
 <a asp-controller="Category" asp-action="Index">
     <i class="bi bi-arrow-left " style="font-size:2rem"></i>
