--- a/ITI.ElectroDev.Presentation/Views/Brand/Delete.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Brand/Delete.cshtml
@@ -1,5 +1,4 @@
 ﻿
-<h1>Confirm This Brand</h1>
-<h1>Are You Sure To Delete This Brand : @Model.Name</h1>
+<h1>@localizer["Confirm Delete"]</h1>
 <a class="btn  btn-danger" asp-controller="Brand" asp-action="Delete" asp-route-id="@Model.Id">Yes</a>
 <a class="btn btn-primary" asp-controller="Brand" asp-action="Index">Cancel</a>
