--- a/ITI.ElectroDev.Presentation/Views/Brand/Details.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Brand/Details.cshtml
@@ -4,11 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>@localizer["Brand Details"]</h1>
 
 <div>
-    <h4>Brand</h4>
-    <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Id)
@@ -31,6 +29,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-controller="Brand" asp-route-id="@Model.Id" class="btn btn-success">Edit</a> |
-    <a asp-action="Index" asp-controller="Brand">Back to List</a>
+    <a asp-action="Edit" asp-controller="Brand" asp-route-id="@Model.Id" class="btn btn-success">@localizer["Edit Brand"]</a> |
+    <a asp-action="Index" asp-controller="Brand">@localizer["Back To List"]</a>
 </div>
