--- a/ITI.ElectroDev.Presentation/Views/Product/Edit.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Product/Edit.cshtml
@@ -1,9 +1,4 @@
-<<<<<<< HEAD
-﻿@model ProductCreateModel
-@using System.Globalization
-@using ITI.ElectroDev.Presentation
-@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer localizer﻿
+@model ProductCreateModel
 @{
     ViewData["Title"] = "Edit Product";
 }
@@ -15,16 +10,12 @@
 </h2>
 <hr />
 
-
-
 <section class="row">
     <div class="col-md-4">
 
         <form method="post" asp-controller="Product" asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly"></div>
-
               <input type="hidden" asp-for="id" class="form-control" />
-
             <div class="form-group">
                 <label asp-for="Name"></label>
                 <input asp-for="Name" class="form-control" />
@@ -57,19 +48,13 @@
 
             <div class="form-group">
                 <label asp-for="BrandId"></label>
-                <select asp-for="BrandId" class="form-select" aria-label="Default select example" asp-items="@ViewBag.Brands">
+                <select class="form-control" asp-for="BrandId" aria-label="Default select example" asp-items="@ViewBag.brands">
                     <option selected>--Select Brand--</option>
                 </select>
-                <span asp-validation-for="BrandId"></span>
+                @*<input type="number" class="form-control" asp-for="BrandId" />*@
+                <span asp-validation-for="BrandId" class="validation  text-danger"></span>
             </div>
-
-
-
-
-
-
             <div>
-
                 <button type="submit" class="btn btn-primary mt-4">
                     <i class="bi bi-check"></i>
                     @localizer["Edit"]
@@ -79,88 +64,6 @@
                     @localizer["Close"]
                 </a>
             </div>
-
         </form>
     </div>
-@*    <div class="col-md-4">
-        <img src="~/Images/@Model.ProductImages.FirstOrDefault()?.Path" alt="@Model.Name" class="img-fluid rounded-start" alt="image" class="img-thumbnail" />*@
-        @*"~/Images/@Model.ProductImages.FirstOrDefault()?.Path" alt="@Model.Name" class="img-fluid rounded-start"*@
-
-=======
-﻿@model ProductCreateModel;
-
-@{
-    ViewData["Title"] = "Edit Product";
-}
-
-
-<h2 class="mt-5">
-    <i class="bi bi-bag-check-fill"></i>
-    Edit Product
-</h2>
-<hr />
-
-<section class="row">
-    <div class="col-md-4">
-
-        <form method="post" asp-controller="Product" asp-action="Edit" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly"></div>
-              <input type="hidden" asp-for="id" class="form-control" />
-            <div class="form-group">
-                <label asp-for="Name"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="validation text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="Description"></label>
-                <textarea asp-for="Description" class="form-control" rows="4"> </textarea>
-                <span asp-validation-for="Description" class="validation text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Price"></label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="validation text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="Quantity"></label>
-                <input asp-for="Quantity" class="form-control" />
-                <span asp-validation-for="Quantity" class="validation text-danger"></span>
-
-            </div>
-
-            <div class="form-group">
-                <label asp-for="Images"></label>
-                <input asp-for="Images" class="form-control" />
-                <span asp-validation-for="Images"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="BrandId"></label>
-                <select class="form-control" asp-for="BrandId" asp-items="@ViewBag.brands">
-                </select>
-                @*<input type="number" class="form-control" asp-for="BrandId" />*@
-                <span asp-validation-for="BrandId" class="validation  text-danger"></span>
-
-            </div>
-            <div>
-
-                <button type="submit" class="btn btn-primary mt-4">
-                    <i class="bi bi-check"></i>
-                    Edit
-                </button>
-                <a asp-action="Index" class="btn btn-outline-secondary mt-4">
-                    <i class="bi bi-x"></i>
-                    Close
-                </a>
-            </div>
-
-        </form>
-    </div>
-@*    <div class="col-md-4">
-        <img src="~/Images/@Model.ProductImages.FirstOrDefault()?.Path" alt="@Model.Name" class="img-fluid rounded-start" alt="image" class="img-thumbnail" />*@
-        @*"~/Images/@Model.ProductImages.FirstOrDefault()?.Path" alt="@Model.Name" class="img-fluid rounded-start"*@
-
->>>>>>> yousef27
 </section>
