--- a/ITI.ElectroDev.Presentation/Views/Shared/_Layout.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Shared/_Layout.cshtml
@@ -1,6 +1,3 @@
-@using System.Globalization
-@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer localizer﻿
 @{
 	var isRTL = CultureInfo.CurrentCulture.Name.StartsWith("ar");
 }
@@ -18,9 +15,9 @@
 	<!-- Custom CSS -->
 	<link href="~/Content/css/style.css" rel='stylesheet' type='text/css' />
 	<link href="~/Content/css/style-responsive.css" rel="stylesheet" />
-	<link href="~/Content/css/_Layout.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://therichpost.com/responsivestyle/index.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.4.0/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.4.0/font/bootstrap-icons.min.css">
+    
 	<!-- font CSS -->
 	<link href='//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 	<!-- font-awesome icons -->
@@ -29,21 +26,19 @@
 	<link rel="stylesheet" href="~/Content/css/morris.css" type="text/css" />
 	<!-- calendar -->
 	<link rel="stylesheet" href="~/Content/css/monthly.css">
-
-	@RenderSection("style" , false) ;
 	<!-- //calendar -->
+	@RenderSection("style" , false) 
 	<!-- //font-awesome icons -->
-	@*    <link rel="stylesheet" href="~/Content/lib/twitter-bootstrap/css/bootstrap.min.css" />
-	*@
+    <link rel="stylesheet" href="~/Content/lib/twitter-bootstrap/css/bootstrap.min.css" />
 	<script src="~/Content/js/jquery2.0.3.min.js"></script>
 	<script src="~/Content/js/raphael-min.js"></script>
 	<script src="~/Content/js/morris.js"></script>
 	@if (isRTL)
 	{
-		<link href="~/Content/css/StyleSheet.css" rel='stylesheet' type='text/css' />
-		<link href="~/Content/css/style-responsiv-rtl.css" rel='stylesheet' type='text/css' />
-		<link rel="stylesheet" href="https://therichpost.com/responsivestyle/index.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.4.0/font/bootstrap-icons.min.css">
+	 <link href="~/Content/css/StyleSheet.css" rel='stylesheet' type='text/css' />
+	 <link href="~/Content/css/style-responsiv-rtl.css" rel='stylesheet' type='text/css' />
+     <link rel="stylesheet" href="https://therichpost.com/responsivestyle/index.css">
+	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.4.0/font/bootstrap-icons.min.css">
 
 	}
 </head>
@@ -174,18 +169,16 @@
 				<!--search & user info start-->
 				<ul class="nav top-menu">
 					<li>
-						@*<input type="text" class="form-control search" placeholder=" Search">*@
-						<div>
+						<div style="display:inline">
 							<partial name="_SelectLanguage" />
 						</div>
 					</li>
 				</ul>
+				<form class="d-flex" asp-action="Search" asp-controller="Product">
+					<input class="form-control me-2" type="search" name="term" placeholder="Search" aria-label="Search">
+					<button class="btn btn-outline-success" type="submit">Search</button>
+				</form>
 				<!--search & user info end-->
-
-		 <form class="d-flex" asp-action="Search" asp-controller="Product" >
-        <input class="form-control me-2" type="search" name="term" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
 			</div>
 		</header>
 		<!--header end-->
@@ -203,7 +196,7 @@
 						</li>
 
 						<li>
-							<a class="active" asp-action="Index" asp-controller="Category">
+							<a class="active" asp-action="Index" asp-controller="Category" >
 								<i class="fa fa-align-justify"></i>
 								<span>@localizer["Categories"]</span>
 							</a>
@@ -244,17 +237,25 @@
 			</div>
 		</aside>
 		<!--sidebar end-->
+		
 		<!--main content start-->
 		<section id="main-content" style="height: 100vh">
 			<section class="wrapper">
 				<!-- //market-->
 				@RenderBody()
 			</section>
-
+		
 			<!-- / footer -->
 		</section>
 		<!--main content end-->
 	</section>
+	<script src="~/Content/js/bootstrap.js"></script>
+	<script src="~/Content/js/jquery.dcjqaccordion.2.7.js"></script>
+	<script src="~/Content/js/scripts.js"></script>
+	<script src="~/Content/js/jquery.slimscroll.js"></script>
+	<script src="~/Content/js/jquery.nicescroll.js"></script>
+	<!--[if lte IE 8]><script language="javascript" type="text/javascript" src="js/flot-chart/excanvas.min.js"></script><![endif]-->
+	<script src="~/Content/js/jquery.scrollTo.js"></script>
 	<!-- morris JavaScript -->
 	<script>
 		$(document).ready(function () {
@@ -268,10 +269,12 @@
 				jQuery(this).closest('.small-graph-box').fadeOut(200);
 				return false;
 			});
+
 			//CHARTS
 			function gd(year, day, month) {
 				return new Date(year, month - 1, day).getTime();
 			}
+
 			graphArea2 = Morris.Area({
 				element: 'hero-area',
 				padding: 10,
@@ -294,6 +297,7 @@
 					{ period: '2016 Q3', iphone: 4830, ipad: 3805, itouch: 1598 },
 					{ period: '2016 Q4', iphone: 15083, ipad: 8977, itouch: 5185 },
 					{ period: '2017 Q1', iphone: 10697, ipad: 4470, itouch: 2038 },
+
 				],
 				lineColors: ['#eb6f6f', '#926383', '#eb6f6f'],
 				xkey: 'period',
@@ -304,15 +308,20 @@
 				hideHover: 'auto',
 				resize: true
 			});
+
+
 		});
 	</script>
 	<!-- calendar -->
 	<script type="text/javascript" src="~/Content/js/monthly.js"></script>
 	<script type="text/javascript">
 		$(window).load(function () {
+
 			$('#mycalendar').monthly({
 				mode: 'event',
+
 			});
+
 			$('#mycalendar2').monthly({
 				mode: 'picker',
 				target: '#mytarget',
@@ -322,6 +331,7 @@
 				stylePast: true,
 				disablePast: true
 			});
+
 			switch (window.location.protocol) {
 				case 'http:':
 				case 'https:':
@@ -330,22 +340,16 @@
 				case 'file:':
 					alert('Just a heads-up, events will not work when run locally.');
 			}
+
 		});
 	</script>
 	<!-- //calendar -->
 	<!-- jQuery Plugins -->
-	<script src="~/js/main.js"></script>
-	<script src="~/Content/js/bootstrap.js"></script>
-	<script src="~/Content/js/jquery.dcjqaccordion.2.7.js"></script>
-	<script src="~/Content/js/scripts.js"></script>
-	<script src="~/Content/js/jquery.slimscroll.js"></script>
-	<script src="~/Content/js/jquery.nicescroll.js"></script>
-	<!--[if lte IE 8]><script language="javascript" type="text/javascript" src="js/flot-chart/excanvas.min.js"></script><![endif]-->
-	<script src="~/Content/js/jquery.scrollTo.js"></script>
-	@*<script src="~/lib/jquery/jquery.min.js"></script>
-	<script src="~/lib/jquery-validate/jquery.validate.min.js"></script>
-	<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-	<script src="~/lib/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>*@
-	@await RenderSectionAsync("Scripts", required: false)
+    <script src="~/js/main.js"></script>
+    <script src="~/lib/jquery/jquery.min.js"></script>
+    <script src="~/lib/jquery-validate/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/lib/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
