delete viewer opinion

--- a/ITI.ElectroDev.Presentation/Views/User/Control.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/User/Control.cshtml
@@ -15,8 +15,9 @@
     <li> <a class="l" asp-action="SignUpEditor" asp-controller="User"> <i class="bi bi-person-plus-fill"></i> @localizer["To Add an Editor"]</a> </li>
    
    
-    <li> <a class="l" asp-action="SignUpCustomer" asp-controller="User"> <i class="bi bi-person-plus-fill"></i> @localizer["To Add a Customer"] </a> </li>
-    <li> <a class="l" asp-action="Add" asp-controller="Role"><i class="bi bi-person-plus-fill"></i> @localizer["To Add Role"] </a> </li>
+@*    <li> <a class="l" asp-action="SignUpCustomer" asp-controller="User"> <i class="bi bi-person-plus-fill"></i> @localizer["To Add a Customer"] </a> </li>
+*@   
+<li> <a class="l" asp-action="Add" asp-controller="Role"><i class="bi bi-person-plus-fill"></i> @localizer["To Add Role"] </a> </li>
 
     <li> <a class ="l" asp-action="UsersDetails" asp-controller="User"> <i class="bi bi-pencil-square"></i> @localizer["To Update User Information"]</a> </li>
     <li> <a class="l" asp-action="UsersDetails" asp-controller="User">     <i class="bi bi-person-dash-fill"></i> @localizer["To Delete a User"]</a> </li>
