--- a/ITI.ElectroDev.Presentation/Views/User/SignUpCustomer.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/User/SignUpCustomer.cshtml
@@ -1,4 +1,4 @@
-﻿@model UserCreateModel
+﻿@*@model UserCreateModel
 @using System.Globalization
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer localizer﻿
@@ -39,5 +39,6 @@
     <input type="submit" value="Register" class="btn btn-primary" style="margin:10px" />
    @* <div class="m-t-25 m-b--5 align-center">
         <a asp-controller="User" asp-action="SignIn">You already have a membership?</a>
-    </div>*@
+    </div>
 </form>
+*@
