--- a/ITI.ElectroDev.Presentation/Views/Product/Create.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Product/Create.cshtml
@@ -32,6 +32,10 @@
                 <span asp-validation-for="Price" class="validation text-danger"></span>
             </div>
             <div class="form-group">
+                <label>Discount</label>
+                <input asp-for="Discount" class="form-control" />
+            </div>
+            <div class="form-group">
                 <label asp-for="Quantity"></label>
                 <input asp-for="Quantity" class="form-control" />
                 <span asp-validation-for="Quantity" class="validation text-danger"></span>
