--- a/ITI.ElectroDev.Presentation/Views/Product/Edit.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Product/Edit.cshtml
@@ -32,7 +32,12 @@
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="validation text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Discount"></label>
+                <input asp-for="Discount" class="form-control" />
+                <span asp-validation-for="Discount" class="validation text-danger"></span>
 
+            </div>
             <div class="form-group">
                 <label asp-for="Quantity"></label>
                 <input asp-for="Quantity" class="form-control" />
