modify in database and product component

--- a/ITI.ElectroDev.Presentation/Views/Category/Index.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Category/Index.cshtml
@@ -1,5 +1,5 @@
 @model List<Category>
-<header class="bg-surface-primary border-bottom pt-6">
+<header class="bg-surface-primary border-bottom pt-6" style="background-color:burlywood">
     <div class="container-fluid">
         <div class="mb-npx">
             <div class="row align-items-center">
@@ -19,7 +19,7 @@
         </div>
     </div>
 </header>
-<main class="bg-surface-primary border-bottom pt-6 mt-5">
+<main class="border-bottom pt-3 mt-5" style="background-color:burlywood">
     <div class="container-fluid mt-5 mb-5">
         @if (Model.ToList<Category>().Count != 0)
         {
