modify in design

--- a/ITI.ElectroDev.Presentation/Views/Product/Index.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Product/Index.cshtml
@@ -29,18 +29,18 @@ ViewData["Title"] = "Products";
     }
     else
     {
-        <table class="table" style="color:black;font-weight:bold;font-size:120%"
+        <table class="table table-secondary table-hover" style="color:black;font-weight:bold;font-size:120%"
            border="5" bordercolor="black" align="center" id="table">
             <thead>
-                <tr>
+                <tr style="background-color:black">
                     <th scope="col">#</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Quantity</th>
-                    <th scope="col">Price</th>
-                    <th scope="col">Image</th>
-                    <th scope="col">Details</th>
-                    <th scope="col">Delete</th>
-                    <th scope="col">Edit</th>
+                    <th scope="col" class="text-light">Name</th>
+                    <th scope="col" class="text-light">Quantity</th>
+                    <th scope="col" class="text-light">Price</th>
+                    <th scope="col" class="text-light">Image</th>
+                    <th scope="col" class="text-light">Details</th>
+                    <th scope="col" class="text-light">Delete</th>
+                    <th scope="col" class="text-light">Edit</th>
 
                 </tr>
             </thead>
