--- a/ITI.ElectroDev.Presentation/Views/Category/_PagedCategories.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Category/_PagedCategories.cshtml
@@ -1,8 +1,8 @@
 <div class="table-responsive">
     <table class="table table-hover table-nowrap text-center table-secondary">
-        <thead class="thead-light">
-            <tr>
-                <th scope="col" class="table-dark">@localizer["Category Name"]</th>
+        <thead>
+            <tr style="background-color:black">
+                <th scope="col" style="color:white">@localizer["Category Name"]</th>
                 <th></th>
             </tr>
         </thead>
