--- a/ITI.ElectroDev.Presentation/Views/Brand/Index.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Brand/Index.cshtml
@@ -2,31 +2,38 @@
 <h1>@localizer["Brands"]</h1>
 <a asp-action="AddNewBrand" asp-controller="Brand" class="btn btn-primary">@localizer["Add Brand"]</a>
 <div class="table-responsive">
-<table class="table table-hover table-nowrap text-center">
-    <thead class="thead-light">
-        <tr>
-            <th scope="col">@localizer["Brand"]</th>
-            <th scope="col">@localizer["Category"]</th>
-            <th scope="col"></th>
-        </tr>
-    </thead>
+    <table class="table table-secondary table-hover" style="color:black;font-weight:bold;font-size:120%"
+           border="5" bordercolor="black" align="center" id="table">
+        <thead>
+            <tr style="background-color:black;">
+                <th style="color:white" scope="col" >@localizer["Brand"]</th>
+                <th style="color:white " scope="col">@localizer["Category"]</th>
+                <th></th>
+              
+            </tr>
+        </thead>
     <tbody>
         @foreach (Brand item in Model)
         {
-            <tr>
-                <td>@item.Name</td>
-                <td>@item.Category.Name</td>
-                <td class="text-end">
-                    <a class="btn d-inline-flex btn-sm btn-neutral border-base mx-1" asp-controller="Brand" asp-action="Details" asp-route-id="@item.Id">
-                        <span class="h3 font-bold">@localizer["Brand Details"]</span>
-                    </a>
-                    <a class="btn d-inline-flex btn-sm btn-neutral border-base mx-1" asp-controller="Brand" asp-action="Edit" asp-route-id="@item.Id">
-                        <span class="h3 font-bold pe-2"> <i class="bi bi-pencil h3 font-bold"></i> </span>
-                        <span class="h3 font-bold">@localizer["Edit Brand"]</span>
-                    </a>
-                    <a class="btn btn-danger btn btn-sm btn-square  text-danger-hover h3 font-bold " asp-controller="Brand" asp-action="Delete" asp-route-id="@item.Id"> <i class="bi bi-trash h3 font-bold text-white"></i></a>
-                </td>
-            </tr>
+        
+                <tr>
+                    <td><span class="h4 mb-0">@item.Name</span></td>
+                    <td><span class="h4 mb-0">@item.Category.Name</span></td>
+                    <td class="col-sm-6 col-12 text-sm-end">
+                        <a asp-controller="Brand" asp-action="Details" asp-route-id="@item.Id" class="btn mx-1 btn-outline-secondary">
+                            <i class="bi bi-camera-reels"></i>
+                                @localizer["Brand Details"]
+                        </a>
+                        <a asp-controller="Brand" asp-action="Edit" asp-route-id="@item.Id" class="btn mx-1 btn-outline-primary">
+                            <i class="bi bi-pencil"></i>
+                            <span class="pe-0">@localizer["EditBtn"]</span>
+                        </a>
+                         <a href="~/Brand/Delete?id=@item.Id" id="deleteBtn" class="btn btn-danger btn-sm btn-square  text-danger-hover " onclick="return confirm('@localizer["deleteMsg"] : @item.Name');">
+                            <i class="bi bi-trash h5 text-white mx-auto"></i>
+                        </a>
+                    </td>
+                </tr>
+            
         }
     </tbody>
 </table>
