--- a/ITI.ElectroDev.Presentation/Views/Category/_PagedCategories.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Category/_PagedCategories.cshtml
@@ -12,11 +12,9 @@
                 <tr>
                     <td><span class="h4 mb-0">@item.Name</span></td>
                     <td class="col-sm-6 col-12 text-sm-end">
-                        <a class="btn d-inline-flex btn-sm btn-neutral border-base mx-1" asp-controller="Category" asp-action="Edit" asp-route-id="@item.Id" asp-route-Name="@item.Name">
-                            <div class="d-flex justify-content-center">
-                                <i class="bi bi-pencil h5"></i>
-                                <span class="pe-0">@localizer["EditBtn"]</span>
-                            </div>
+                        <a class="btn mx-1 btn-outline-primary" asp-controller="Category" asp-action="Edit" asp-route-id="@item.Id" asp-route-Name="@item.Name">
+                            <i class="bi bi-pencil"></i>
+                            <span class="pe-0">@localizer["EditBtn"]</span>
                         </a>
                         <a href="~/Category/Delete?id=@item.Id" id="deleteBtn" class="btn btn-danger btn-sm btn-square  text-danger-hover " onclick="return confirm('@localizer["deleteMsg"] : @item.Name');">
                             <i class="bi bi-trash h5 text-white mx-auto"></i>
