--- a/ITI.ElectroDev.Presentation/Views/Brand/Index.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Brand/Index.cshtml
@@ -20,10 +20,10 @@
                     <td><span class="h4 mb-0">@item.Name</span></td>
                     <td><span class="h4 mb-0">@item.Category.Name</span></td>
                     <td class="col-sm-6 col-12 text-sm-end">
-                        <a asp-controller="Brand" asp-action="Details" asp-route-id="@item.Id" class="btn mx-1 btn-outline-secondary">
+                       @* <a asp-controller="Brand" asp-action="Details" asp-route-id="@item.Id" class="btn mx-1 btn-outline-secondary">
                             <i class="bi bi-camera-reels"></i>
                                 @localizer["Brand Details"]
-                        </a>
+                        </a>*@
                         <a asp-controller="Brand" asp-action="Edit" asp-route-id="@item.Id" class="btn mx-1 btn-outline-primary">
                             <i class="bi bi-pencil"></i>
                             <span class="pe-0">@localizer["EditBtn"]</span>
