--- a/ITI.ElectroDev.Presentation/Views/Order/Index.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Order/Index.cshtml
@@ -28,15 +28,16 @@
                             <td>@item.PaymentMethod</td>
                             <td>@item.Status</td>
                             <td class="text-end">
-                                <a class="btn d-inline-flex btn-sm btn-neutral border-base mx-1" asp-controller="Order" asp-action="OrderInfo" asp-route-id="@item.Id">
-                                    <span class="h3 font-bold">Details</span>
+                                <a class ="btn btn-outline-secondary" asp-controller="Order" asp-action="OrderInfo" asp-route-id="@item.Id">
+                                  <i class="bi bi-camera-reels"></i>Details
                                 </a>
-                                <a class="btn d-inline-flex btn-sm btn-neutral border-base mx-1" asp-controller="Order" asp-action="Edit" asp-route-id="@item.Id">
-                                    <span class="h3 font-bold pe-2"> <i class="bi bi-pencil h3 font-bold"></i> </span>
-                                    <span class="h3 font-bold">@localizer["EditBtn"]</span>
+                                <a class="btn btn-outline-primary" asp-controller="Order" asp-action="Edit" asp-route-id="@item.Id">
+                                    <i class="bi bi-pencil"></i>
+                                   @localizer["EditBtn"]
                                 </a>
-                                <a class="btn btn-danger btn btn-sm btn-square  text-danger-hover h3 font-bold " asp-controller="Order" asp-action="Delete" asp-route-id="@item.Id"> <i class="bi bi-trash h3 font-bold text-white"></i></a>
-                            </td>
+                             
+@*                                <a class="btn btn-danger btn btn-sm btn-square  text-danger-hover h3 font-bold " asp-controller="Order" asp-action="Delete" asp-route-id="@item.Id"> <i class="bi bi-trash h3 font-bold text-white"></i></a>
+*@                            </td>
                         </tr>
                     }
                 </tbody>
