--- a/ITI.ElectroDev.Presentation/Views/User/SignIn.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/User/SignIn.cshtml
@@ -2,98 +2,7 @@
     Layout = "";
      
 }
-@*<style>
-    body {
-        background-color:brown;
 
-    }
-
-    input[type=text], select {
-        width: 100%;
-        padding: 12px 20px;
-/*        margin: 8px 0;
-*/        display: inline-block;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        box-sizing: border-box;
-    }
-     input[type=password]{
-        width: 100%;
-        padding: 12px 20px;
-/*        margin: 8px 0;
-*/        display: inline-block;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        box-sizing: border-box;
-    }
-    input[type=submit] {
-        width: 50%;
-        background-color: dimgrey;
-        color: white;
-        padding: 14px 20px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        margin-left: 270px;
-    }
-
-        input[type=submit]:hover {
-            background-color: #45a049;
-        }
-
-    div ,form{
-        width:50%;
-        border-radius: 5px;
-        background-color: brown;
-        padding: 20px;
-        align-content:center;
-        margin-left:250px;
-
-    }
-    label{
-        color:white;
-    }
-   
-
-</style>
-
-<h3 style="text-align:center;color:white; margin:10px;">Welcome to Login Page</h3>
-
-<br />
-<br />
-<br />
-<br />
-@if (TempData["AlertMessage"] != null)
-{
-    <div class="alert alert-success">
-        <strong>Success !</strong>@TempData["AlertMessage"]
-    </div>
-}
-<form method="post" asp-action="SignIn" asp-controller="User">
-    <div asp-validation-summary="ModelOnly"></div>
-    <div class="form-group">
-        <label asp-for="UserName"></label>
-        
-            <select asp-for="UserName" class="form-control" asp-items="@ViewBag.UserName">
-                <option></option>
-            </select>
-        
-        <span asp-validation-for="UserName" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Password"></label>
-        <input asp-for="Password" class="form-control" />
-        <span asp-validation-for="Password" class="text-danger" ></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="RememberMe"></label>
-        <input asp-for="RememberMe" />
-        <span asp-validation-for="RememberMe"></span>
-    </div>
-    <input type="hidden" asp-for="ReturnUrl"/>
-    <input class="btn btn-primary" value="Sign In" type="submit" />
-</form>*@
-   
 
 
 
@@ -104,7 +13,9 @@
 
 
 @model LoginModel
-
+@{
+	var isRTL = CultureInfo.CurrentCulture.Name.StartsWith("ar");
+}
 
 <!--A Design by W3layouts
 Author: W3layout
@@ -113,31 +24,13 @@ License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="@(isRTL ? "RTL" : "LTR")">
 <head>
-   @* <title>Visitors an Admin Panel Category Bootstrap Responsive Website Template | Login :: w3layouts</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="keywords" content="Visitors Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-    <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-    <!-- bootstrap-css -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- //bootstrap-css -->
-    <!-- Custom CSS -->
-    <link href="css/style.css" rel='stylesheet' type='text/css' />
-    <link href="css/style-responsive.css" rel="stylesheet" />
-    <!-- font CSS -->
-    <link href='//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    <!-- font-awesome icons -->
-    <link rel="stylesheet" href="css/font.css" type="text/css" />
-    <link href="css/font-awesome.css" rel="stylesheet">
-    <!-- //font-awesome icons -->
-    <script src="js/jquery2.0.3.min.js"></script>*@
+   
 
 
 
-    <title>ElectroDev</title>
+    <title>Amazon Admin Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="" />
@@ -159,6 +52,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <link rel="stylesheet" href="~/Content/css/morris.css" type="text/css" />
     <!-- calendar -->
     <link rel="stylesheet" href="~/Content/css/monthly.css">
+    <!--rtl-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo9N" crossorigin="anonymous">
+
+
+    @if (isRTL)
+    {
+        <link href="~/Content/css/StyleSheet.css" rel='stylesheet' type='text/css' />
+        <link href="~/Content/css/style-responsiv-rtl.css" rel='stylesheet' type='text/css' />
+        <link rel="stylesheet" href="https://therichpost.com/responsivestyle/index.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.4.0/font/bootstrap-icons.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo9N" crossorigin="anonymous">
+
+    }
+
     <!-- //calendar -->
     <!-- //font-awesome icons -->
     @*    <link rel="stylesheet" href="~/Content/lib/twitter-bootstrap/css/bootstrap.min.css" />
@@ -176,10 +83,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             border:1px #F3C448 solid;
             
         }
-        #sign:hover{
-            background-color:green;
-        }
-        
+      
+      
+      
        
       
     </style>
@@ -213,31 +119,34 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="log-w3">
         <div class="w3layouts-main" style="background:none" id="main">
             <h2> @localizer["Sign In To Admin Dashboard"] </h2>
+
             <form method="post" asp-action="SignIn" asp-controller="User">
-                <span asp-validation-summary="ModelOnly"></span>
-        <div>
+                <div asp-validation-summary="ModelOnly"></div>
+
+        <div class="form-group">
             <br />  
         <label asp-for="UserName"></label>
          @*<select class="s" asp-for="UserName"  asp-items="@ViewBag.UserName" >
                 <option></option>
          </select>
 *@
-                    <input asp-for="UserName" type="text" class="container-fluid"/>
-          <span asp-validation-for="UserName" class="text-danger"></span>
+                    <input asp-for="UserName" type="text" class="container-fluid form-control" style="border:1px solid #fc9b12" />
+          <span asp-validation-for="UserName" class="text-black"></span>
          
     </div>         
               
     <br />
-   <div class="mt-10">
+   <div class="mt-10 form-group">
         <label asp-for="Password"></label>
-        <input asp-for="Password" class="container-fluid" />
-        <span asp-validation-for="Password" class="text-danger" ></span>
+                    <input asp-for="Password" class="container-fluid form-control" style="border:1px solid #fc9b12" />
+        <span asp-validation-for="Password" class="text-black" ></span>
         
     </div>
     <br />
-    <div class="mx-10">
+    <div class="mx-10 form-group">
                 <input type="hidden" asp-for="ReturnUrl" class="form-control"/>
-                <input class="btn btn-primary" id="sign" style="background-color:#F3C448;" value="Sign In" type="submit" />
+                    <button class="btn btn-primary container-fluid"
+                           style="background-color:#F3C448;" type="submit">@localizer["SignIn"]</button>
           </div>
             </form>
             <img class="w-20 mx-auto rounded d-flex" src="./Images/amazonblack.png">
@@ -252,6 +161,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!--[if lte IE 8]><script language="javascript" type="text/javascript" src="js/flot-chart/excanvas.min.js"></script><![endif]-->
     <script src="js/jquery.scrollTo.js"></script>
     
+
+  
+   
 </body>
 </html>
 
