--- a/ITI.ElectroDev.Presentation/Views/User/SignUp.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/User/SignUp.cshtml
@@ -56,7 +56,7 @@
            <option></option>
        </select>
    </div>
-    <input type="submit" value="Continue" class="btn btn-primary" style="margin:10px;background-color:#F3C448;" />
+    <button type="submit" class="btn btn-primary" style="margin:10px;background-color:#F3C448;">@localizer["Continue"]</button>
  @*<div class="m-t-25 m-b--5 align-center">
  <a asp-controller="User" asp-action="SignIn">You already have a membership?</a>
    </div>*@
