--- a/ITI.ElectroDev.Presentation/wwwroot/Content/css/style.css
+++ b/ITI.ElectroDev.Presentation/wwwroot/Content/css/style.css
@@ -18,12 +18,12 @@ h1, h2, h3 {margin: 0;}
 ul, ol {margin: 0;}
 p {margin: 0;}
 
-html, body{
-	font-family: 'Roboto', sans-serif;
+html, body {
+    font-family: 'Roboto', sans-serif;
     font-size: 100%;
     overflow-x: hidden;
-    background: url(../images/bg.jpg) no-repeat 0px 0px;
-	background-size:cover;
+/*    background: url(../images/bg.png) no-repeat fixed ;
+*/    background-size: cover;
 }
 body a{
 	transition: 0.5s all ease;
@@ -167,7 +167,6 @@ ul.sidebar-menu li a span {
     display:inline-block;
 }
 ul.sidebar-menu li a {
-    color:#fff;
     text-decoration:none;
     display:block;
     padding:18px 0 18px 25px;
@@ -379,7 +378,6 @@ ul.top-menu>li>a:hover,ul.top-menu>li>a:focus {
     padding:10px;
 }
 .dropdown-menu.extended li a:hover {
-    color:#32323a;
 }
 .dropdown-menu.tasks-bar .task-info .desc {
     font-size:13px;
